@@ -1,0 +1,11 @@
+// Copyright (c) 2015-2017 The Gulden developers
+// Authored by: Malcolm MacLeod (mmacleod@webmail.co.za)
+// Distributed under the GULDEN software license, see the accompanying
+// file COPYING
+
+#ifndef GULDEN_UTIL_H
+#define GULDEN_UTIL_H
+
+void rescanThread();
+
+#endif
