@@ -164,6 +164,9 @@ struct CExtKey {
     unsigned int nChild;
     ChainCode chaincode;
     CKey key;
+    
+    const CKey& GetKey() const { return key; };
+    CKey& GetMutableKey() { return key; };
 
     friend bool operator==(const CExtKey& a, const CExtKey& b)
     {
